fix(apps/node-api): update endpoints post request body to use one name
